--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.21.5",
     "aos": "^2.3.4",
     "i18next": "^23.15.2",
     "react": "^18.3.1",
