--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.21.5",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "i18next": "^23.15.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "sass": "^1.79.5",
     "swiper": "^11.1.14"
