--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "antd": "^5.21.5",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
-    "i18next": "^23.15.2",
+    "i18next": "^23.16.4",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.2",
+    "react-i18next": "^15.1.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
