--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,8 @@
       "@/pages/*": ["./src/pages/*"],
       "@/styles/*": ["./src/styles/*"],
       "@/images/*": ["./src/images/*"],
-      "@/store/*": ["./src/store/*"]
+      "@/store/*": ["./src/store/*"],
+      "@/utils/*": ["./src/utils/*"]
     }
   },
   "include": ["src"]
